--- a/config/database.yml
+++ b/config/database.yml
@@ -17,24 +17,22 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: mbdb
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: blog_app_development
+  database: social_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: blog_app
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: mbdb
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -59,7 +57,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blog_app_test
+  database: social_app_development
+  username: postgres
+
+  # The password associated with the postgres role (username).
+  password: mbdb
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: blog_app_production
-  username: blog_app
-  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
+  database: social_app_production
+  username: social_app
+  password: <%= ENV["SOCIAL_APP_DATABASE_PASSWORD"] %>
