--- a/config/database.yml
+++ b/config/database.yml
@@ -17,22 +17,24 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: mbdb
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: social_app_development
+  database: Blog_App_d
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: postgres
+  #username: Blog_App
 
   # The password associated with the postgres role (username).
-  password: mbdb
+  #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,11 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: social_app_development
-  username: postgres
-
-  # The password associated with the postgres role (username).
-  password: mbdb
+  database: Blog_App_t
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -85,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: social_app_production
-  username: social_app
-  password: <%= ENV["SOCIAL_APP_DATABASE_PASSWORD"] %>
+  database: Blog_App_production
+  username: Blog_App
+  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
