--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,5 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
-# .gitignore
-node_modules/
+/node_modules
+/package-lock.json
