--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,3 +58,7 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+ 
+Layout/EndOfLine:
+   Enabled: False
+
