--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-*
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -30,4 +34,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+.vscode
 node_modules
+/app/assets/builds/*
+!/app/assets/builds/.keep
+!/app/assets/builds/tailwind.css
