--- a/config/database.yml
+++ b/config/database.yml
@@ -17,22 +17,24 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: mbdb
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: hellorails_development
+  database: BlogApp_d7
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: postgres
+  #username: BlogApp
 
   # The password associated with the postgres role (username).
-  password: mbdb
+  #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,11 +59,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hellorails_test
-  username: postgres
+  database: BlogApp_t7
 
-  # The password associated with the postgres role (username).
-  password: mbdb
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -84,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: hellorails_production
-  username: hellorails
-  password: <%= ENV["HELLORAILS_DATABASE_PASSWORD"] %>
+  database: BlogApp_production7
+  username: BlogApp
+  password: <%= ENV["BLOGAPP_DATABASE_PASSWORD"] %>
