--- a/config/database.yml
+++ b/config/database.yml
@@ -19,22 +19,23 @@ default: &default
   encoding: unicode
   username: postgres
   password: mbdb
+ 
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: BlogApp_d7
+  database: blog_development8
+  username: postgres
+  password: mbdb
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: BlogApp
 
   # The password associated with the postgres role (username).
-  #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -59,7 +60,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: BlogApp_t7
+  database: blog_test
+  username: postgres
+  password: mbdb
+  host: 127.0.0.1
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +87,6 @@ test:
 #
 production:
   <<: *default
-  database: BlogApp_production7
-  username: BlogApp
-  password: <%= ENV["BLOGAPP_DATABASE_PASSWORD"] %>
+  database: blog_production
+  username: blog
+  password: <%= ENV["BLOG_DATABASE_PASSWORD"] %>
