--- a/config/database.yml
+++ b/config/database.yml
@@ -19,23 +19,22 @@ default: &default
   encoding: unicode
   username: postgres
   password: mbdb
- 
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: blog_development8
-  username: postgres
-  password: mbdb
+  database: BlogApp_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
+  #username: BlogApp
 
   # The password associated with the postgres role (username).
+  #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -60,10 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blog_test
-  username: postgres
-  password: mbdb
-  host: 127.0.0.1
+  database: BlogApp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -87,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: blog_production
-  username: blog
-  password: <%= ENV["BLOG_DATABASE_PASSWORD"] %>
+  database: BlogApp_production
+  username: BlogApp
+  password: <%= ENV["BLOGAPP_DATABASE_PASSWORD"] %>
